fix(variables): fix alert content gap value #395

--- a/src/tedi/components/notifications/alert/alert.module.scss
+++ b/src/tedi/components/notifications/alert/alert.module.scss
@@ -14,7 +14,7 @@
 
   &__content {
     display: flex;
-    gap: var(--alert-default-inner-spacing-x);
+    gap: var(--layout-grid-gutters-08);
     align-items: flex-start;
 
     .tedi-alert__icon {
